examples/hasura-eccomerce/graphql-engine.yml
---
kind: Pod
apiVersion: v1
metadata:
  name: hasura-engine
  labels:
    app: hasura-engine
  namespace: production
spec:
  containers:
    - name: graphql-engine
      image: hasura/graphql-engine:v2.0.0-beta.2.cli-migrations-v2
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          port: 8080
        timeoutSeconds: 30
        initialDelaySeconds: 40
        failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: hasura-engine
  labels:
    app: hasura-engine
  namespace: production
spec:
  type: LoadBalancer
  selector:
    app: hasura-engine
  ports:
    - port: 8060
      targetPort: http
