examples/hasura-eccomerce/postgres.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-hasura
  namespace: database
  labels:
    app: hasura-eccomerce
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: base
                operator: In
                values:
                  - "yes"
  volumes:
    - name: hasura-pv-storage
      persistentVolumeClaim:
        claimName: postgres-hasura-claim
  containers:
    - name: hasura-database
      image: postgres:13
      ports:
        - containerPort: 5432
          name: postgres
      volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: hasura-pv-storage
---
kind: Service
apiVersion: v1
metadata:
  name: hasura-database
  namespace: database
  labels:
    app: hasura-eccomerce
spec:
  selector:
    app: hasura-eccomerce
  ports:
    - port: 5432
      name: postgres
      targetPort: postgres
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: hasura-database
  namespace: production
  labels:
    app: hasura-eccomerce
spec:
  type: ExternalName
  externalName: hasura-database.database.svc.cluster.local
