examples/hasura-eccomerce/web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura-web
  namespace: production
  labels:
    app: hasura-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hasura-web
  template:
    metadata:
      labels:
        app: hasura-web
    spec:
      containers:
        - name: web
          image: mostela/hasura-web
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: static
                      operator: Exists
                topologyKey: "kubernetes.io/hostname"
              weight: 100
---
apiVersion: v1
kind: Service
metadata:
  name: hasura-web
  labels:
    app: hasura-web
  namespace: production
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: http
  selector:
    app: hasura-web
